--- a/page3.html
+++ b/page3.html
@@ -120,14 +120,14 @@
             <div class="row padding2" >
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="picture/vera1.jpg"/>
+                            <img class="img-fluid rounded-circle mb-3" src="picture/vera.jpg"/>
                             <h5>Lim Xin En Vera</h5>
                             <p class="font-weight-light mb-0">veralimxe05@gmail.com</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="picture/vincent.jpg" alt="..." />
+                            <img class="img-fluid rounded-circle mb-3" src="picture/chai ning.jpg" alt="..." />
                             <h5>Wong Chai Ning</h5>
                             <p class="font-weight-light mb-0">chaining_wong@mymail.sutd.edu.sg</p>
                         </div>
