--- a/page2.html
+++ b/page2.html
@@ -31,7 +31,7 @@
                             <li class="nav-item poppins-new black"><a class="nav-link poppins med" href="index.html">Home</a></li>
                             <li class="nav-item poppins-new black"><a class="nav-link" href="page2.html"> Progress</a></li>
                             <li class="nav-item poppins-new black"><a class="nav-link" href="page3.html">Team</a></li>
-                            <li class="nav-item poppins-new black"><a class="nav-link" href="page4.html">Contact</a></li>
+                            <li class="nav-item poppins-new black"><a class="nav-link" href="">Contact</a></li>
                             <li class="nav-item dropdown">
                         </ul>
                     </div>
