--- a/page2.html
+++ b/page2.html
@@ -254,7 +254,7 @@
                         <div class="col-lg-6 order-first order-lg-last"><img class="img-fluid rounded mb-5 mb-lg-0 my-padding" src="picture/baloon wheels.jpg" alt="..." />
                         </div>
                         <div class="col-lg-6">
-                            <h3 class="poppins-medium2"> c. Baloon Wheels</h3>
+                            <h3 class="poppins-medium2"> c. Balloon Wheels</h3>
                                 <p class="mb-0 poppins-new black">
                                 The concept of the balloon wheels was to be contented with the continuous tracks on what would be the main method of movement for the robot itself. Whilst in development, the wheels were ultimately to be used to be a back up plan in the event that the tracks were to break down in the midst of operation.
                                 </p>
@@ -285,9 +285,46 @@
                 <div class="container px-5 my-5">
                     <h1 class=" poppins-thick2 black" style ="padding-bottom: 40px;"> 2. Electronics </h1>
                     <div class="row gx-5 align-items-center">
-                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0 my-padding " src="picture/new feeder.jpg" alt="..." /></div>
+                        <div class="col-lg-6 order-first order-lg-last "><img class="img-fluid rounded mb-5 mb-lg-0 my-padding " src="picture/electronics2.jpg" alt="..." /></div>
                         <div class="col-lg-6">
                             <p class="mb-0 poppins-new"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </section>
+    </div>
+
+     <div style="background-color:#e5f6f7">
+     <section class="py-5" id="scroll-target">
+                <div class="container px-5 my-5">
+                    <div class="row gx-5 align-items-center">
+                        <div class="col-lg-6"> <img class="img-fluid rounded mb-5 mb-lg-0 my-padding" src="picture/electronics3.jpg" alt="..." />
+                        </div>
+                        <div class="col-lg-6">
+                            <h3 class="poppins-medium2">Challenges</h3>
+                            <p class="mb-0 poppins-new"> 
+                               - Soldering components, preventing overheating, and ensuring smooth integration between hardware and software. <br>
+                               - Thermal management was a priority, with current-limiting resistors, heatsinks, and capacitors implemented to prevent components from overheating and malfunctioning.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
+    </div>
+
+      <div style="background-color: white ;"><
+    <section class="py-5" id="scroll-target">
+                <div class="container px-5 my-5">
+                    <div class="row gx-5 align-items-center">
+                        <div class="col-lg-6 order-first order-lg-last "><img class="img-fluid rounded mb-5 mb-lg-0 my-padding " src="picture/electronics4.jpg" alt="..." /></div>
+                        <div class="col-lg-6">
+                            <h3 class="poppins-medium2">Our Solution</h3>
+                            <p class="mb-0 poppins-new"> 
+                            - To address soldering issues, I used an adjustable-temperature soldering iron, heat shrink tubing, and soldering flux to ensure secure and durable connections. <br>
+                            - Power distribution was managed through the use of voltage regulators and dedicated power boards, ensuring each component received the appropriate voltage. By understanding the schematics of the different components, I was able to break down the different usages and identify ways of troubleshooting. The Arduino and ESP32 boards were used for their versatility and processing power in handling the robot's tasks.
+                            </p>
                         </div>
                     </div>
                 </div>
