--- a/page3.html
+++ b/page3.html
@@ -35,7 +35,7 @@
                         <div class="col-lg-8 col-xl-7 col-xxl-6">
                             <div class="my-5 text-center text-xl-start">
                                 <h1 class="display-5 fw-bolder text-white mb-2 poppins-thick" style="padding-top: 89px;"> Introducing The Team !</h1>
-                                <p class="lead fw-normal text-white-50 mb-4 poppins-medium"> The group consists of 29 people that made Sand-E Possible</p>
+                                <p class="lead fw-normal text-white-50 mb-4 poppins-medium"> The group consists of 27 people that made Sand-E Possible</p>
                             </div>
                         </div>
                         <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"></div>
@@ -144,9 +144,9 @@
             <div class="row padding2" >
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="picture/vincent.jpg"/>
-                            <h5>Joon ooi</h5>
-                            <p class="font-weight-light mb-0">Project leader</p>
+                            <img class="img-fluid rounded-circle mb-3" src="picture/joon.jpg"/>
+                            <h5>Ooi Xin Wei Jonathan</h5>
+                            <p class="font-weight-light mb-0">Was involved in early planning stages of trash collection system, developed prototype for it, involved in naming the robot, CADded out box at the back, dust shield for electronic components, and assisted in general assembly of the robot.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
