--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="picture/robot.jpg" alt="..." /></div>
                         <div class="col-lg-6">
                             <h2 class="fw-bolder poppins-medium"> Introducing Sand-E !</h2>
-                            <p class="mb-0 poppins-new"> Sand-E is one of the project initiated by SUTD Organization of Autonomous Robots aims to create a machine that can clean the beach. The Sand-E robot is powered by lithium-polymer (LiPo) batteries that is a fully remote-controlledcprototype.</p>
+                            <p class="mb-0 poppins-new"> Sand-E is one of the project initiated by SUTD Organization of Autonomous Robots (SOAR) aims to create a machine that can clean the beach. The Sand-E robot is powered by lithium-polymer (LiPo) batteries that is a fully remote-controlledcprototype.</p>
                         </div>
                     </div>
                 </div>
