--- a/page2.html
+++ b/page2.html
@@ -287,7 +287,7 @@
                     <div class="row gx-5 align-items-center">
                         <div class="col-lg-6 order-first order-lg-last "><img class="img-fluid rounded mb-5 mb-lg-0 my-padding " src="picture/electronics2.jpg" alt="..." /></div>
                         <div class="col-lg-6">
-                            <p class="mb-0 poppins-new"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+                            <p class="mb-0 poppins-new"> The electronics team in a robot project handles motor control, power management, and sensor integration. They design PCBs to simplify wiring, ensure safety, and optimize performance, bridging the mechanical and software components for smooth operation. </p>
                         </div>
                     </div>
                 </div>
