--- a/page2.html
+++ b/page2.html
@@ -205,9 +205,7 @@
                <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
                         <div class="col-lg-6 order-first order-lg-last">
-                            <video autoplay muted loop playsinline controls style="width: 100%; height: auto; padding-bottom: 80px; padding-top: 80px;">
-                            <source src="video/video1.mp4" type="video/mp4">
-                            </video>
+                         <img class="img-fluid rounded mb-5 mb-lg-0 my-padding" src="picture/tracks before.png" alt="..." />   
                         </div>
                         <div class="col-lg-6">
                             <h3 class="poppins-medium2">Challenges</h3>
@@ -228,9 +226,7 @@
                 <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
                         <div class="col-lg-6">
-                           <video autoplay muted loop playsinline controls style="width: 100%; max-width: 400px; height: auto; transform: rotate(90deg); margin: 0 auto; display: block;">
-                                 <source src="video/video2.mp4" type="video/mp4">
-                            </video>
+                           <img class="img-fluid rounded mb-5 mb-lg-0 my-padding" src="picture/tracks after.png" alt="..." />  
                         </div>
                         <div class="col-lg-6">
                             <h3 class="poppins-medium2"> Our Solution </h3>
