--- a/page3.html
+++ b/page3.html
@@ -122,14 +122,14 @@
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
                             <img class="img-fluid rounded-circle mb-3" src="picture/vera.jpg"/>
                             <h5>Lim Xin En Vera</h5>
-                            <p class="font-weight-light mb-0">veralimxe05@gmail.com</p>
+                            <p class="font-weight-light mb-0">Grateful to be a part of the design, fabrication and testing of SAND-E which helped me develop hands-on engineering skills. It was rewarding to innovate a meaningful project together with the team!</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
                             <img class="img-fluid rounded-circle mb-3" src="picture/chai ning.jpg" alt="..." />
                             <h5>Wong Chai Ning</h5>
-                            <p class="font-weight-light mb-0">chaining_wong@mymail.sutd.edu.sg</p>
+                            <p class="font-weight-light mb-0">super proud to be able to learn with the team and see our hard work come to fruition!</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
