--- a/page3.html
+++ b/page3.html
@@ -23,7 +23,6 @@
                             <li class="nav-item poppins-new"><a class="nav-link poppins med" href="index.html">Home</a></li>
                             <li class="nav-item poppins-new"><a class="nav-link" href="page2.html"> Progress</a></li>
                             <li class="nav-item poppins-new"><a class="nav-link" href="page3.html">Team</a></li>
-                            <li class="nav-item poppins-new"><a class="nav-link" href="">Contact</a></li>
                             <li class="nav-item dropdown">
                         </ul>
                     </div>
@@ -167,4 +166,15 @@
             </div>
         </section>
 </body>
+<footer style="background-color: #333; color: white; padding: 20px; text-align: center; margin-top: 20px;">
+            <p style="margin: 0; font-family: 'Poppins', sans-serif;">
+                Connect with us: 
+                <a href="mailto:soar@club.sutd.edu.sg" style="color: #f2f2f2; text-decoration: none; margin-left: 10px;">
+                    soar@club.sutd.edu.sg
+                </a>
+            </p>
+            <a href="https://www.instagram.com/sutdsoar/" target="_blank" style="text-decoration: none; margin-top: 10px; display: inline-block;">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" style="width: 24px; height: 24px; margin-top: 10px;">
+            </a>
+        </footer>
 </html>
