--- a/page3.html
+++ b/page3.html
@@ -135,7 +135,7 @@
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
                             <img class="img-fluid rounded-circle mb-3" src="picture/Audrey.jpg" alt="..." />
                             <h5>Audrey Dominique </h5>
-                            <p class="font-weight-light mb-0">audreydominique19@gmail.com</p>
+                            <p class="font-weight-light mb-0">I'm grateful to have been part of the trash collection system team and the website development process. It was a fantastic experience collaborating with others!</p>
                         </div>
                     </div>
                 </div>
