--- a/page2.html
+++ b/page2.html
@@ -186,7 +186,7 @@
             </section>
     </div>
 
-     <div style="background-color: white ;"><
+     <div style="background-color: #f1f1ec;"><
     <section class="py-5" id="scroll-target">
                 <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
