--- a/page2.html
+++ b/page2.html
@@ -168,7 +168,7 @@
                 <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
                         <div class="col-lg-6">
-                           <video autoplay muted loop playsinline controls style="width: 100%; max-width: 400px; height: auto; transform: rotate(90deg); margin: 0 auto; display: block;">
+                           <video autoplay muted loop playsinline controls style="max-width: 300px; height: auto; transform: rotate(90deg); margin: 0 auto; display: block;">
                                  <source src="video/video2.mp4" type="video/mp4">
                             </video>
                         </div>
