--- a/page2.html
+++ b/page2.html
@@ -168,7 +168,7 @@
                 <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
                         <div class="col-lg-6">
-                           <video autoplay muted loop playsinline controls style="max-width: 300px; height: auto; transform: rotate(90deg); margin: 0 auto; display: block;">
+                           <video autoplay muted loop playsinline controls style="max-width: 450px; height: auto; margin: 0 auto; display: block;">
                                  <source src="video/video2.mp4" type="video/mp4">
                             </video>
                         </div>
@@ -204,7 +204,7 @@
                <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
                         <div class="col-lg-6 order-first order-lg-last">
-                         <img class="img-fluid rounded mb-5 mb-lg-0 my-padding" src="picture/tracks before.png" alt="..." />   
+                         <img class="img-fluid rounded mb-5 mb-lg-0 my-padding" src="picture/Tracks Before.png" alt="..." />   
                         </div>
                         <div class="col-lg-6">
                             <h3 class="poppins-medium2">Challenges</h3>
@@ -225,7 +225,7 @@
                 <div class="container px-5 my-5">
                     <div class="row gx-5 align-items-center">
                         <div class="col-lg-6">
-                           <img class="img-fluid rounded mb-5 mb-lg-0 my-padding" src="picture/tracks after.png" alt="..." />  
+                           <img class="img-fluid rounded mb-5 mb-lg-0 my-padding" src="picture/Tracks after.png" alt="..." />  
                         </div>
                         <div class="col-lg-6">
                             <h3 class="poppins-medium2"> Our Solution </h3>
