--- a/page2.html
+++ b/page2.html
@@ -299,8 +299,8 @@
                         <div class="col-lg-6">
                             <h3 class="poppins-medium2">Challenges</h3>
                             <p class="mb-0 poppins-new"> 
-                               - Soldering components, preventing overheating, and ensuring smooth integration between hardware and software. <br>
-                               - Thermal management was a priority, with current-limiting resistors, heatsinks, and capacitors implemented to prevent components from overheating and malfunctioning.
+                                - Soldering components, preventing overheating, and ensuring smooth integration between hard and software. <br>
+                                - The layout of the components, wiring, and ESP32-S3 was a challenge. The electronics needed to be well-distributed to accommodate the motors, which were positioned far apart.
                             </p>
                         </div>
                     </div>
