--- a/page3.html
+++ b/page3.html
@@ -61,9 +61,9 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="picture/vincent.jpg" alt="..." />
-                            <h5>Puah Joon Leng</h5>
-                            <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
+                            <img class="img-fluid rounded-circle mb-3" src="picture/joon leng.jpg" alt="..." />
+                            <h5>Joon Leng</h5>
+                            <p class="font-weight-light mb-0"> I am deeply honored to be part of this extraordinary and transformative experience. The journey with everyone has been immensely enriching.</p>
                         </div>
                     </div>
                 </div>
@@ -152,7 +152,7 @@
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
                             <img class="img-fluid rounded-circle mb-3" src="picture/stephen.jpg" alt="..." />
                             <h5>Goh Wei An Stephen </h5>
-                            <p class="font-weight-light mb-0">stephengowa@gmail.com</p>
+                            <p class="font-weight-light mb-0">I'm thankful to have been part of the SAND-E project, working on its design, fabrication, and electronics. It was an amazing experience collaborating with the team to bring SAND-E to life!</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
