--- a/page3.html
+++ b/page3.html
@@ -102,9 +102,9 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="picture/vincent.jpg" alt="..." />
+                            <img class="img-fluid rounded-circle mb-3" src="picture/bryan lim.jpg" alt="..." />
                             <h5>Lim Nguyen Ping, Bryan</h5>
-                            <p class="font-weight-light mb-0">"Bootstrap is amazing. I've been using it to create lots of super nice landing pages."</p>
+                            <p class="font-weight-light mb-0">Sand-E has been an enormous learning opportunity for me, helping me to hone skills like CAD, as well as new ones like basic electronics and circuit design. In this short timeframe, I’m proud to have worked with the rest of the team to produce such an effective end-product.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -157,9 +157,33 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="picture/vince.jpg" alt="..." />
-                            <h5>Lim Xin En Vera</h5>
-                            <p class="font-weight-light mb-0">"Thanks so much for making these free resources available to us!"</p>
+                            <img class="img-fluid rounded-circle mb-3" src="picture/vincent.jpg" alt="..." />
+                            <h5>palak adnani</h5>
+                            <p class="font-weight-light mb-0">nil</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+             <div class="row padding2" >
+                    <div class="col-lg-4">
+                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                            <img class="img-fluid rounded-circle mb-3" src="picture/vincent.jpg"/>
+                            <h5>Minh</h5>
+                            <p class="font-weight-light mb-0">Was involved in early planning stages of trash collection system, developed prototype for it, involved in naming the robot, CADded out box at the back, dust shield for electronic components, and assisted in general assembly of the robot.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                            <img class="img-fluid rounded-circle mb-3" src="picture/somesh.jpg" alt="..." />
+                            <h5>Somesh Agrawal </h5>
+                            <p class="font-weight-light mb-0">Thrilled to have played a role in designing, fabricating, and testing SAND-E! This hands-on experience sharpened my engineering skills, and the journey of turning an idea into reality with an incredible team made it even more rewarding. Innovating something meaningful together was an experience to remember!</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                            <img class="img-fluid rounded-circle mb-3" src="picture/jj.jpg" alt="..." />
+                            <h5>Kwan Jun Jie</h5>
+                            <p class="font-weight-light mb-0">Project Advisor</p>
                         </div>
                     </div>
                 </div>
