--- a/page3.html
+++ b/page3.html
@@ -169,7 +169,7 @@
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
                             <img class="img-fluid rounded-circle mb-3" src="picture/vincent.jpg"/>
                             <h5>Minh</h5>
-                            <p class="font-weight-light mb-0">Was involved in early planning stages of trash collection system, developed prototype for it, involved in naming the robot, CADded out box at the back, dust shield for electronic components, and assisted in general assembly of the robot.</p>
+                            <p class="font-weight-light mb-0">Nil.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
